feat: link navbar buttons with routes

--- a/src/components/navbar/navbar.component.html
+++ b/src/components/navbar/navbar.component.html
@@ -1,10 +1,10 @@
 <mat-toolbar>
-  <button mat-button>MD LED Visual</button>
+  <button mat-button [routerLink]="['/']">MD LED Visual</button>
 
   <span class="spacer"></span>
 
-  <button mat-button>O mnie</button>
-  <button mat-button>Galeria</button>
-  <button mat-button>Wycena</button>
-  <button mat-button>Kontakt</button>
+  <button mat-button [routerLink]="['o-mnie']">O mnie</button>
+  <button mat-button [routerLink]="['galeria']">Galeria</button>
+  <button mat-button [routerLink]="['wycena']">Wycena</button>
+  <button mat-button [routerLink]="['kontakt']">Kontakt</button>
 </mat-toolbar>
