style: wrap content with container

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
 <mdlv-navbar></mdlv-navbar>
-<mdlv-title></mdlv-title>
 
-<router-outlet />
+<div class="content-container">
+  <mdlv-title></mdlv-title>
+  <router-outlet></router-outlet>
+</div>
