--- a/src/components/background-slideshow/background-slideshow.component.scss
+++ b/src/components/background-slideshow/background-slideshow.component.scss
@@ -9,3 +9,16 @@
   transition: background-image 1s ease-in-out;
   z-index: -1;
 }
+
+.overlay {
+  position: absolute;
+  top: 65%;
+  left: 5%;
+  transform: translateY(-50%);
+  text-align: left;
+  color: white;
+}
+
+h1 {
+  font-size: 3em;
+}
