feat(slideshow): add button routing to /kontakt

--- a/src/components/background-slideshow/background-slideshow.component.html
+++ b/src/components/background-slideshow/background-slideshow.component.html
@@ -2,4 +2,5 @@
 
 <div class="overlay" *ngIf="showText" @fadeIn>
   <h1>{{currentImage.text}}</h1>
+  <button mat-flat-button [routerLink]="['/kontakt']">Zarezerwuj termin</button>
 </div>
