refactor: use layouts to provide proper styling

--- a/src/layouts/default-layout/default-layout.component.html
+++ b/src/layouts/default-layout/default-layout.component.html
@@ -1,1 +1,5 @@
-<p>default-layout works!</p>
+<mdlv-navbar></mdlv-navbar>
+<div class="default-content-container">
+  <mdlv-title></mdlv-title>
+  <ng-content></ng-content>
+</div>
