fix(layout): resolve issue with missing child routes content

--- a/src/layouts/home-layout/home-layout.component.html
+++ b/src/layouts/home-layout/home-layout.component.html
@@ -1,4 +1,4 @@
 <mdlv-navbar></mdlv-navbar> 
 <div class="home-content-container">
-  <ng-content></ng-content>
+  <router-outlet></router-outlet>
 </div>
