--- a/src/layouts/default-layout/default-layout.component.html
+++ b/src/layouts/default-layout/default-layout.component.html
@@ -1,5 +1,5 @@
 <mdlv-navbar></mdlv-navbar>
 <div class="default-content-container">
   <mdlv-title></mdlv-title>
-  <ng-content></ng-content>
+  <router-outlet></router-outlet>
 </div>
