--- a/src/components/background-slideshow/background-slideshow.component.scss
+++ b/src/components/background-slideshow/background-slideshow.component.scss
@@ -1,13 +1,9 @@
 .background {
-  position: fixed;
-  top: 0;
-  left: 0;
   width: 100%;
-  height: 100%;
+  height: 100vh;
   background-size: cover;
   background-position: center;
   transition: background-image 1s ease-in-out;
-  z-index: -1;
 }
 
 .overlay {
