feat: add in-page navigation through fragments

--- a/src/components/navbar/navbar.component.html
+++ b/src/components/navbar/navbar.component.html
@@ -3,8 +3,8 @@
 
   <span class="spacer"></span>
 
-  <button mat-button [routerLink]="['o-mnie']">O mnie</button>
+  <button mat-button [routerLink]="['/']" fragment="o-mnie">O mnie</button>
   <button mat-button [routerLink]="['galeria']">Galeria</button>
   <button mat-button [routerLink]="['wycena']">Wycena</button>
-  <button mat-button [routerLink]="['kontakt']">Kontakt</button>
+  <button mat-button [routerLink]="['/']" fragment="kontakt">Kontakt</button>
 </mat-toolbar>
