--- a/src/views/home/home.component.html
+++ b/src/views/home/home.component.html
@@ -1,2 +1,12 @@
 <mdlv-background-slideshow></mdlv-background-slideshow>
-<mdlv-learn-more></mdlv-learn-more>
+<div class="content-container">
+  <section id="o-mnie">
+    <h2>O mnie</h2>
+    <mdlv-about></mdlv-about>
+  </section>
+
+  <section id="kontakt">
+    <h2>Kontakt</h2>
+    <mdlv-contact></mdlv-contact>
+  </section>
+</div>
