feat: add buttons for navigation to gallery and pricing

--- a/src/views/home/home.component.html
+++ b/src/views/home/home.component.html
@@ -3,6 +3,8 @@
   <section id="o-mnie">
     <h2>O mnie</h2>
     <mdlv-about></mdlv-about>
+    <button mat-flat-button [routerLink]="['/galeria']">Więcej zdjęć</button>
+    <button mat-flat-button [routerLink]="['/wycena']">Sprawdź wycenę</button>
   </section>
 
   <section id="kontakt">
