chore: generate component for contact form

--- a/src/views/contact/contact.component.html
+++ b/src/views/contact/contact.component.html
@@ -40,3 +40,5 @@
   fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
   culpa qui officia deserunt mollit anim id est laborum.
 </div>
+
+<mdlv-contact-form></mdlv-contact-form>
