style(gallery) reduce columns to 2, increase gutter size

--- a/src/views/gallery/gallery.component.html
+++ b/src/views/gallery/gallery.component.html
@@ -1,4 +1,8 @@
-<mat-tab-group mat-stretch-tabs="false" mat-align-tabs="center" (selectedTabChange)="selectedCategory = $event.tab.textLabel">
+<mat-tab-group
+  mat-stretch-tabs="false"
+  mat-align-tabs="center"
+  (selectedTabChange)="selectedCategory = $event.tab.textLabel"
+>
   <mat-tab label="wszystkie"></mat-tab>
   <mat-tab label="koncerty"></mat-tab>
   <mat-tab label="eventy"></mat-tab>
@@ -6,9 +10,9 @@
   <mat-tab label="inne"></mat-tab>
 </mat-tab-group>
 
-<mat-grid-list cols="3" rowHeight="2:1" gutterSize="4px">
+<mat-grid-list cols="2" rowHeight="2:1" gutterSize="16px">
   <mat-grid-tile *ngFor="let image of filteredImages">
-    <mat-grid-tile-header> {{image.title}} </mat-grid-tile-header>
-    <img [src]="image.uri" alt="Gallery image">
+    <mat-grid-tile-header> {{ image.title }} </mat-grid-tile-header>
+    <img [src]="image.uri" alt="Gallery image" />
   </mat-grid-tile>
 </mat-grid-list>
