--- a/src/views/gallery/gallery.component.html
+++ b/src/views/gallery/gallery.component.html
@@ -3,11 +3,10 @@
   mat-align-tabs="center"
   (selectedTabChange)="selectedCategory = $event.tab.textLabel"
 >
-  <mat-tab label="wszystkie"></mat-tab>
-  <mat-tab label="koncerty"></mat-tab>
-  <mat-tab label="eventy"></mat-tab>
-  <mat-tab label="targi"></mat-tab>
-  <mat-tab label="inne"></mat-tab>
+  <mat-tab label="imprezy plenerowe"></mat-tab>
+  <mat-tab label="imprezy firmowe"></mat-tab>
+  <mat-tab label="imprezy prywatne"></mat-tab>
+  <mat-tab label="prezentacje"></mat-tab>
 </mat-tab-group>
 
 <mat-grid-list cols="2" rowHeight="2:1" gutterSize="16px">
