--- a/src/components/pricing-form/pricing-form.component.html
+++ b/src/components/pricing-form/pricing-form.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="pricingForm" (ngSubmit)="onSubmit()">
+<form [formGroup]="pricingForm">
   <div>
     <label>Miejsce:</label>
     <mat-radio-group formControlName="place">
@@ -25,8 +25,6 @@
       <mat-radio-button value="3x6">3x6</mat-radio-button>
     </mat-radio-group>
   </div>
-
-  <button mat-button type="submit">Sprawdź wycenę</button>
 
   <h2>Przybliżony koszt: {{ price }} zł</h2>
 </form>
