fix(gallery) add missing tab for all

--- a/src/views/gallery/gallery.component.html
+++ b/src/views/gallery/gallery.component.html
@@ -3,6 +3,7 @@
   mat-align-tabs="center"
   (selectedTabChange)="selectedCategory = $event.tab.textLabel"
 >
+  <mat-tab label="wszystkie"></mat-tab>
   <mat-tab label="imprezy firmowe"></mat-tab>
   <mat-tab label="imprezy prywatne"></mat-tab>
   <mat-tab label="imprezy plenerowe"></mat-tab>
