feat(home): add offer presentation component to display grids with offer & images

--- a/src/views/home/home.component.html
+++ b/src/views/home/home.component.html
@@ -6,7 +6,13 @@
     <button mat-flat-button [routerLink]="['/galeria']">Więcej zdjęć</button>
     <button mat-flat-button [routerLink]="['/wycena']">Sprawdź wycenę</button>
   </section>
+</div>
 
+<section id="oferta">
+  <mdlv-offer-presentation></mdlv-offer-presentation>
+</section>
+
+<div class="content-container">
   <section id="kontakt">
     <h2>Kontakt</h2>
     <mdlv-contact></mdlv-contact>
