--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,5 +4,5 @@ html,
 body {
   height: 100%;
   margin: 0;
-  font-family: "Wix Madefor Text", Roboto, "Helvetica Neue", sans-serif;
+  font-family: "Poppins", Roboto, "Helvetica Neue", sans-serif;
 }
