--- a/src/views/home/home.component.html
+++ b/src/views/home/home.component.html
@@ -1,19 +1,21 @@
 <mdlv-background-slideshow></mdlv-background-slideshow>
-<div class="content-container">
-  <section id="o-mnie">
-    <h2>O mnie</h2>
-    <mdlv-about></mdlv-about>
-    <button mat-flat-button [routerLink]="['/galeria']">Więcej zdjęć</button>
-    <button mat-flat-button [routerLink]="['/wycena']">Sprawdź wycenę</button>
-  </section>
-</div>
+
+<div class="break"></div>
+
+<mdlv-offer-banner></mdlv-offer-banner>
+
+<div class="break"></div>
 
 <section id="oferta">
   <mdlv-offer-presentation></mdlv-offer-presentation>
 </section>
 
-<div class="content-container">
-  <section id="kontakt">
-    <mdlv-contact></mdlv-contact>
-  </section>
+<div class="break"></div>
+
+<div class="purple-container">
+  <div class="content-container">
+    <section id="kontakt">
+      <mdlv-contact></mdlv-contact>
+    </section>
+  </div>
 </div>
