--- a/src/views/home/home.component.scss
+++ b/src/views/home/home.component.scss
@@ -6,3 +6,13 @@
 h2 {
   text-align: center;
 }
+
+.break {
+  padding-top: 32px;
+  background-color: #fcf65c;
+}
+
+.purple-container {
+  color: white;
+  background-color: #14002d;
+}
