--- a/src/components/offer-banner/offer-banner.component.scss
+++ b/src/components/offer-banner/offer-banner.component.scss
@@ -3,7 +3,13 @@
   flex-direction: column;
   padding-top: 56px;
   padding-bottom: 64px;
-  background-color: #14002d; /* Use RGB format */
+  background: rgb(0, 6, 11);
+  background: linear-gradient(
+    90deg,
+    rgba(0, 6, 11, 1) 0%,
+    rgba(14, 0, 39, 1) 35%,
+    rgba(8, 0, 34, 1) 100%
+  );
 }
 
 .offer-banner-text {
