style(navbar): use icon button with logo as home button

--- a/src/components/navbar/navbar.component.html
+++ b/src/components/navbar/navbar.component.html
@@ -1,5 +1,10 @@
 <mat-toolbar>
-  <button mat-button [routerLink]="['/']">MD LED Visual</button>
+  <button mat-icon-button [routerLink]="['/']">
+    <mat-icon
+      svgIcon="mdlv-logo"
+      aria-label="MD LED Visual logo button routing to homepage"
+    ></mat-icon>
+  </button>
 
   <span class="spacer"></span>
 
