style(offer-banner): add logo image

--- a/src/components/offer-banner/offer-banner.component.html
+++ b/src/components/offer-banner/offer-banner.component.html
@@ -1,4 +1,5 @@
 <div class="offer-banner-container offer-banner-text">
+  <div class="offer-banner-logo"></div>
   <div>MD LED VISUAL</div>
   <div class="offer-banner-text-secondary">Wynajem Telebimów i Ekranów LED</div>
   <div class="offer-banner-text-secondary">Obsługa i Realizacja Eventów</div>
