--- a/src/components/offer-banner/offer-banner.component.scss
+++ b/src/components/offer-banner/offer-banner.component.scss
@@ -1,6 +1,7 @@
 .offer-banner-container {
   display: flex;
   flex-direction: column;
+  align-items: center;
   padding-top: 56px;
   padding-bottom: 64px;
   background: rgb(0, 6, 11);
@@ -23,4 +24,12 @@
   font-weight: 300;
   font-size: 24px;
   color: white;
+}
+.offer-banner-logo {
+  width: 150px;
+  height: 150px;
+  background-image: url("/assets/icons/mdlv_logo.svg");
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
 }
