style(contact-form): make button flat, update disabled button style

--- a/src/components/contact-form/contact-form.component.html
+++ b/src/components/contact-form/contact-form.component.html
@@ -51,7 +51,11 @@
               >}
             </mat-form-field>
 
-            <button mat-button type="submit" [disabled]="!contactForm.valid">
+            <button
+              mat-flat-button
+              type="submit"
+              [disabled]="!contactForm.valid"
+            >
               Wyślij
             </button>
           </form>
