--- a/src/components/contact-form/contact-form.component.scss
+++ b/src/components/contact-form/contact-form.component.scss
@@ -35,3 +35,9 @@ mat-form-field {
   width: 40px;
   margin-right: 16px;
 }
+
+button[disabled] {
+  background-color: var(--mat-sys-primary);
+  color:  var(--mat-sys-on-primary);
+  opacity: 0.6;
+}
