--- a/src/views/gallery/gallery.component.scss
+++ b/src/views/gallery/gallery.component.scss
@@ -1,11 +1,10 @@
+@import url('https://cdn.jsdelivr.net/npm/lightgallery@2.0.0-beta.4/css/lightgallery.css');
+@import url('https://cdn.jsdelivr.net/npm/lightgallery@2.0.0-beta.4/css/lg-zoom.css');
+
 mat-tab-group {
   margin-bottom: 16px;
 }
 
-mat-grid-tile {
-  img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-  }
+.gallery-item {
+  margin: 5px;
 }
