--- a/src/views/gallery/gallery.component.html
+++ b/src/views/gallery/gallery.component.html
@@ -10,7 +10,11 @@
   <mat-tab label="prezentacje"></mat-tab>
 </mat-tab-group>
 
-<lightgallery [settings]="lightGallerySettings" [onInit]="onLightGalleryInit">
+<lightgallery
+  [settings]="lightGallerySettings"
+  [onInit]="onLightGalleryInit"
+  class="gallery-container"
+>
   <a
     *ngFor="let item of filteredImages"
     class="gallery-item"
