--- a/src/views/gallery/gallery.component.scss
+++ b/src/views/gallery/gallery.component.scss
@@ -5,6 +5,12 @@ mat-tab-group {
   margin-bottom: 16px;
 }
 
+.gallery-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
 .gallery-item {
   margin: 5px;
 }
