feat(gallery): add spinner to indicate image loading

--- a/src/views/gallery/gallery.component.html
+++ b/src/views/gallery/gallery.component.html
@@ -24,3 +24,7 @@
     <img [src]="item.thumbnailUri" />
   </a>
 </lightgallery>
+
+@if (isLoading) {
+<mat-spinner diameter="48" class="spinner-container"></mat-spinner>
+}
