--- a/src/components/background-slideshow/background-slideshow.component.html
+++ b/src/components/background-slideshow/background-slideshow.component.html
@@ -1,6 +1,12 @@
-<div class="background" [ngStyle]="{'background-image': 'url(' + currentImage.uri + ')'}"></div>
-
-<div class="overlay" *ngIf="showText" @fadeIn>
-  <h1>{{currentImage.text}}</h1>
-  <button mat-flat-button [routerLink]="['/kontakt']">Zarezerwuj termin</button>
+<div class="swiper heroSwiper">
+  <div class="swiper-wrapper">
+    @for(image of images; track image) {
+    <div class="swiper-slide">
+      <img [src]="image.uri" />
+    </div>
+    }
+  </div>
+  <div class="swiper-button-next"></div>
+  <div class="swiper-button-prev"></div>
+  <div class="swiper-pagination"></div>
 </div>
