--- a/src/components/background-slideshow/background-slideshow.component.scss
+++ b/src/components/background-slideshow/background-slideshow.component.scss
@@ -1,20 +1,13 @@
-.background {
+.swiper {
   width: 100%;
   height: 100vh;
-  background-size: cover;
-  background-position: center;
-  transition: background-image 1s ease-in-out;
 }
 
-.overlay {
-  position: absolute;
-  top: 65%;
-  left: 5%;
-  transform: translateY(-50%);
-  text-align: left;
-  color: white;
+.swiper-slide img {
+  display: block;
+  width: 100%;
 }
 
-h1 {
-  font-size: 2em;
+.swiper-button-next, .swiper-button-prev {
+  color: var(--mat-sys-on-primary);
 }
