--- a/src/components/background-slideshow/background-slideshow.component.html
+++ b/src/components/background-slideshow/background-slideshow.component.html
@@ -1,8 +1,16 @@
 <div class="swiper heroSwiper">
   <div class="swiper-wrapper">
     @for(image of images; track image) {
-    <div class="swiper-slide">
-      <img [src]="image.uri" />
+    <div
+      class="swiper-slide background"
+      [style.backgroundImage]="'url(' + image.uri + ')'"
+    >
+      <div class="overlay">
+        <h1>{{ image.text }}</h1>
+        <button mat-flat-button [routerLink]="['/kontakt']">
+          Zarezerwuj termin
+        </button>
+      </div>
     </div>
     }
   </div>
