--- a/src/components/background-slideshow/background-slideshow.component.scss
+++ b/src/components/background-slideshow/background-slideshow.component.scss
@@ -8,6 +8,26 @@
   width: 100%;
 }
 
-.swiper-button-next, .swiper-button-prev {
+.swiper-button-next,
+.swiper-button-prev {
   color: var(--mat-sys-on-primary);
+}
+
+.background {
+  width: 100%;
+  height: 100vh;
+  background-size: cover;
+  background-position: center;
+}
+
+.overlay {
+  position: absolute;
+  top: 65%;
+  left: 5%;
+  text-align: left;
+  color: var(--mat-sys-on-primary);
+}
+
+h1 {
+  font-size: 2em;
 }
