--- a/src/components/background-slideshow/background-slideshow.component.html
+++ b/src/components/background-slideshow/background-slideshow.component.html
@@ -1,13 +1,20 @@
 <div class="swiper heroSwiper">
   <div class="swiper-wrapper">
-    @for(image of images; track image) {
+    @for(image of images; track image; let i = $index) {
     <div
       class="swiper-slide background"
       [style.backgroundImage]="'url(' + image.uri + ')'"
     >
       <div class="overlay">
-        <h1>{{ image.text }}</h1>
-        <button mat-flat-button [routerLink]="['/kontakt']">
+        <h1 [@fadeIn]="activeSlideIndex === i ? '*' : 'void'">
+          {{ image.text }}
+        </h1>
+        <button
+          mat-flat-button
+          [routerLink]="['/kontakt']"
+          @slideIn
+          [@fadeIn]="activeSlideIndex === i ? '*' : 'void'"
+        >
           Zarezerwuj termin
         </button>
       </div>
