style(slideshow): set swiper pagination bullets color
seems necessary to update globally

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -27,3 +27,11 @@ mat-toolbar {
     )
   );
 }
+
+.slideshow-pagination .swiper-pagination-bullet {
+  background-color: var(--mat-sys-on-primary);
+}
+
+.slideshow-pagination .swiper-pagination-bullet-active {
+  background-color: var(--mat-sys-on-primary);
+}
