--- a/src/components/background-slideshow/background-slideshow.component.html
+++ b/src/components/background-slideshow/background-slideshow.component.html
@@ -23,5 +23,5 @@
   </div>
   <div class="swiper-button-next"></div>
   <div class="swiper-button-prev"></div>
-  <div class="swiper-pagination"></div>
+  <div class="swiper-pagination slideshow-pagination"></div>
 </div>
