--- a/src/components/offer-presentation/offer-presentation.component.html
+++ b/src/components/offer-presentation/offer-presentation.component.html
@@ -1,9 +1,8 @@
 <mat-grid-list cols="3">
   <mat-grid-tile
-    [style.backgroundImage]="
-      'url(assets/images/Przechwyďż˝_2024_01_18_15_40_37_754.png)'
-    "
+    [style.backgroundImage]="'url(' + images[0] + ')'"
   ></mat-grid-tile>
+
   <mat-grid-tile>
     <div class="tile-content">
       Imprezy firmowe
@@ -11,9 +10,7 @@
     </div></mat-grid-tile
   >
   <mat-grid-tile
-    [style.backgroundImage]="
-      'url(assets/images/Przechwyďż˝_2024_10_12_22_24_03_460.png)'
-    "
+    [style.backgroundImage]="'url(' + images[1] + ')'"
   ></mat-grid-tile>
 
   <mat-grid-tile>
@@ -23,10 +20,9 @@
     </div></mat-grid-tile
   >
   <mat-grid-tile
-    [style.backgroundImage]="
-      'url(assets/images/Przechwyďż˝_2024_01_18_15_42_37_838.png)'
-    "
+    [style.backgroundImage]="'url(' + images[2] + ')'"
   ></mat-grid-tile>
+
   <mat-grid-tile>
     <div class="tile-content">
       Prezentacje
@@ -35,19 +31,17 @@
   >
 
   <mat-grid-tile
-    [style.backgroundImage]="
-      'url(assets/images/Przechwyďż˝_2024_10_12_22_22_23_645.png)'
-    "
+    [style.backgroundImage]="'url(' + images[3] + ')'"
   ></mat-grid-tile>
+
   <mat-grid-tile>
     <div class="tile-content">
       Imprezy plenerowe
       <button mat-flat-button [routerLink]="['/galeria']">Sprawdź</button>
     </div></mat-grid-tile
   >
+
   <mat-grid-tile
-    [style.backgroundImage]="
-      'url(assets/images/Przechwyďż˝_2024_10_12_22_24_43_514.png)'
-    "
+    [style.backgroundImage]="'url(' + images[4] + ')'"
   ></mat-grid-tile>
 </mat-grid-list>
