--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 @use "@angular/material" as mat;
+@use "swiper/css/bundle"; // TODO: check if this could be reduced
 
 html {
   @include mat.theme(
