refactor(navbar): define toolbar variants in styles.scss and set based on layout

--- a/src/layouts/home-layout/home-layout.component.html
+++ b/src/layouts/home-layout/home-layout.component.html
@@ -1,4 +1,4 @@
-<mdlv-navbar></mdlv-navbar> 
+<mdlv-navbar [variant]="toolbarVariant"></mdlv-navbar>
 <div class="home-content-container">
   <router-outlet></router-outlet>
 </div>
