--- a/src/components/navbar/navbar.component.html
+++ b/src/components/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar>
+<mat-toolbar [ngClass]="variant">
   <button mat-icon-button [routerLink]="['/']">
     <mat-icon
       svgIcon="mdlv-logo"
