--- a/src/components/navbar/navbar.component.scss
+++ b/src/components/navbar/navbar.component.scss
@@ -1,3 +1,22 @@
+/* Classes for default navbar */
 .spacer {
   flex: 1 1 auto;
+}
+
+/* Classes for transparent navbar */
+.transparent-navbar-container {
+  display: flex;
+  align-items: center;
+  margin-top: 20px;
+  padding: 6px;
+  border-radius: 24px;
+  background: whitesmoke;
+}
+
+.transparent-navbar-button {
+  background-color: #0e0027;
+  transition: background-color 0.3s ease;
+  &:hover {
+    background-color: #fcf65c;
+  }
 }
