--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 @use "@angular/material" as mat;
 @use "swiper/css/bundle"; // TODO: check if this could be reduced
+@use 'styles/colors' as colors;
 
 html {
   @include mat.theme(
@@ -30,7 +31,7 @@ mat-toolbar {
   &.default {
     @include mat.toolbar-overrides(
       (
-        container-background-color: var(--mat-sys-primary),
+        container-background-color: colors.$deep-purple,
         container-text-color: var(--mat-sys-on-primary),
       )
     );
