chore(navbar): update contact button navigation

--- a/src/components/navbar/navbar.component.html
+++ b/src/components/navbar/navbar.component.html
@@ -31,5 +31,5 @@
 <ng-template #buttonGroupTemplate>
   <button mat-button [routerLink]="['galeria']">Galeria</button>
   <button mat-button [routerLink]="['wycena']">Wycena</button>
-  <button mat-button [routerLink]="['/']" fragment="kontakt">Kontakt</button>
+  <button mat-button [routerLink]="['kontakt']">Kontakt</button>
 </ng-template>
