--- a/src/components/navbar/navbar.component.scss
+++ b/src/components/navbar/navbar.component.scss
@@ -1,3 +1,8 @@
+.button-group {
+  display: flex;
+  gap: 10px;
+}
+
 /* Classes for default navbar */
 .spacer {
   flex: 1 1 auto;
@@ -11,4 +16,5 @@
   padding: 6px;
   border-radius: 24px;
   background: whitesmoke;
+  gap: 10px;
 }
