--- a/src/components/offer-presentation/offer-presentation.component.html
+++ b/src/components/offer-presentation/offer-presentation.component.html
@@ -1,4 +1,4 @@
-<mat-grid-list cols="3">
+<mat-grid-list cols="3" rowHeight="4:3">
   <mat-grid-tile
     [style.backgroundImage]="'url(' + images[0] + ')'"
   ></mat-grid-tile>
