feat(gallery): add navigation for categories

--- a/src/components/offer-presentation/offer-presentation.component.html
+++ b/src/components/offer-presentation/offer-presentation.component.html
@@ -6,7 +6,9 @@
   <mat-grid-tile>
     <div class="tile-content">
       Imprezy firmowe
-      <button mat-flat-button [routerLink]="['/galeria']">Sprawdź</button>
+      <button mat-flat-button [routerLink]="['/galeria/imprezy-firmowe']">
+        Sprawdź
+      </button>
     </div></mat-grid-tile
   >
   <mat-grid-tile
@@ -16,7 +18,9 @@
   <mat-grid-tile>
     <div class="tile-content">
       Imprezy prywatne
-      <button mat-flat-button [routerLink]="['/galeria']">Sprawdź</button>
+      <button mat-flat-button [routerLink]="['/galeria/imprezy-prywatne']">
+        Sprawdź
+      </button>
     </div></mat-grid-tile
   >
   <mat-grid-tile
@@ -26,7 +30,9 @@
   <mat-grid-tile>
     <div class="tile-content">
       Prezentacje
-      <button mat-flat-button [routerLink]="['/galeria']">Sprawdź</button>
+      <button mat-flat-button [routerLink]="['/galeria/prezentacje']">
+        Sprawdź
+      </button>
     </div></mat-grid-tile
   >
 
@@ -37,7 +43,9 @@
   <mat-grid-tile>
     <div class="tile-content">
       Imprezy plenerowe
-      <button mat-flat-button [routerLink]="['/galeria']">Sprawdź</button>
+      <button mat-flat-button [routerLink]="['/galeria/imprezy-plenerowe']">
+        Sprawdź
+      </button>
     </div></mat-grid-tile
   >
 
