--- a/src/views/gallery/gallery.component.html
+++ b/src/views/gallery/gallery.component.html
@@ -1,14 +1,22 @@
-<mat-tab-group
+<nav
+  mat-tab-nav-bar
+  [tabPanel]="tabPanel"
   mat-stretch-tabs="false"
   mat-align-tabs="center"
-  (selectedTabChange)="selectedCategory = $event.tab.textLabel"
 >
-  <mat-tab label="wszystkie"></mat-tab>
-  <mat-tab label="imprezy firmowe"></mat-tab>
-  <mat-tab label="imprezy prywatne"></mat-tab>
-  <mat-tab label="imprezy plenerowe"></mat-tab>
-  <mat-tab label="prezentacje"></mat-tab>
-</mat-tab-group>
+  @for (link of links; track link) {
+  <a
+    mat-tab-link
+    (click)="activeLink = link"
+    [active]="activeLink == link"
+    [routerLink]="['../', link.route]"
+  >
+    {{ link.label }}
+  </a>
+  }
+</nav>
+
+<mat-tab-nav-panel #tabPanel></mat-tab-nav-panel>
 
 <lightgallery
   [settings]="lightGallerySettings"
