chore(photo-swipe): clean up redundant classes & id

--- a/src/components/gallery/photo-swipe/photo-swipe.component.html
+++ b/src/components/gallery/photo-swipe/photo-swipe.component.html
@@ -1,7 +1,4 @@
-<div
-  class="pswp-gallery pswp-gallery--single-column"
-  id="gallery--getting-started"
->
+<div id="photoswipe-gallery">
   <mat-grid-list cols="3" rowHeight="4:3" gutterSize="16px">
     @for (image of images; track image) {
     <a
