--- a/src/components/gallery/gallery.component.html
+++ b/src/components/gallery/gallery.component.html
@@ -1,1 +1,7 @@
-<mdlv-photo-swipe [images]="filteredImages"></mdlv-photo-swipe>
+<div class="gallery-container">
+  <mdlv-photo-swipe [images]="filteredImages"></mdlv-photo-swipe>
+</div>
+
+@if (isLoading) {
+<mat-spinner diameter="48" class="spinner-container"></mat-spinner>
+}
