--- a/src/views/gallery-page/gallery-page.component.html
+++ b/src/views/gallery-page/gallery-page.component.html
@@ -1,21 +1,23 @@
-<nav
-  mat-tab-nav-bar
-  [tabPanel]="tabPanel"
-  mat-stretch-tabs="false"
-  mat-align-tabs="center"
->
-  @for (link of links; track link) {
-  <a
-    mat-tab-link
-    (click)="activeLink = link"
-    [active]="activeLink == link"
-    [routerLink]="['../', link.route]"
+<div class="tabs-container">
+  <nav
+    mat-tab-nav-bar
+    [tabPanel]="tabPanel"
+    mat-stretch-tabs="false"
+    mat-align-tabs="center"
   >
-    {{ link.label }}
-  </a>
-  }
-</nav>
+    @for (link of links; track link) {
+    <a
+      mat-tab-link
+      (click)="activeLink = link"
+      [active]="activeLink == link"
+      [routerLink]="['../', link.route]"
+    >
+      {{ link.label }}
+    </a>
+    }
+  </nav>
 
-<mat-tab-nav-panel #tabPanel></mat-tab-nav-panel>
+  <mat-tab-nav-panel #tabPanel></mat-tab-nav-panel>
+</div>
 
 <mdlv-gallery [activeCategory]="activeLink.label"></mdlv-gallery>
