--- a/src/views/gallery-page/gallery-page.component.scss
+++ b/src/views/gallery-page/gallery-page.component.scss
@@ -1,3 +1,3 @@
-mat-tab-group {
-  margin-bottom: 16px;
+.tabs-container {
+  margin-bottom: 24px; // Or padding-bottom, depending on your design
 }
