--- a/src/components/offer-banner/offer-banner.component.html
+++ b/src/components/offer-banner/offer-banner.component.html
@@ -1,6 +1,13 @@
-<div class="offer-banner-container offer-banner-text">
-  <div class="offer-banner-logo"></div>
+<div
+  class="offer-banner-container offer-banner-text"
+  [class.handset]="isHandset"
+>
+  <div class="offer-banner-logo" [class.handset]="isHandset"></div>
   <div>MD LED VISUAL</div>
-  <div class="offer-banner-text-secondary">Wynajem Telebimów i Ekranów LED</div>
-  <div class="offer-banner-text-secondary">Obsługa i Realizacja Eventów</div>
+  <div class="offer-banner-text-secondary" [class.handset]="isHandset">
+    Wynajem Telebimów i Ekranów LED
+  </div>
+  <div class="offer-banner-text-secondary" [class.handset]="isHandset">
+    Obsługa i Realizacja Eventów
+  </div>
 </div>
