--- a/src/components/slideshow/slider/slider.component.scss
+++ b/src/components/slideshow/slider/slider.component.scss
@@ -27,8 +27,19 @@ button {
   left: 5%;
   text-align: left;
   color: var(--mat-sys-on-primary);
+  &.handset {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    gap: 10px;
+    left: 0%
+  }
 }
 
 h1 {
   font-size: 2em;
+  &.handset {
+    font-size: 1.5em
+  }
 }
