--- a/src/components/gallery/photo-swipe/photo-swipe.component.html
+++ b/src/components/gallery/photo-swipe/photo-swipe.component.html
@@ -1,12 +1,8 @@
 <div id="photoswipe-gallery">
-  <mat-grid-list cols="3" rowHeight="4:3" gutterSize="16px">
+  <mat-grid-list [cols]="cols" [gutterSize]="gutterSize" rowHeight="4:3">
     @for (image of images; track image) {
-    <a
-      [href]="image.imageUri"
-      [attr.data-pswp-width]="image.imageWidth"
-      [attr.data-pswp-height]="image.imageHeight"
-      target="_blank"
-    >
+    <a [href]="image.imageUri" [attr.data-pswp-width]="image.imageWidth" [attr.data-pswp-height]="image.imageHeight"
+      target="_blank">
       <mat-grid-tile [style.background]="image.thumbnailUri">
         <img [src]="image.thumbnailUri" alt="Gallery image" />
       </mat-grid-tile>
