chore(contact): rename view component from contact to contact page

--- a/src/views/home/home.component.html
+++ b/src/views/home/home.component.html
@@ -15,7 +15,7 @@
 <div class="purple-container">
   <div class="content-container">
     <section id="kontakt">
-      <mdlv-contact></mdlv-contact>
+      <mdlv-contact-page></mdlv-contact-page>
     </section>
   </div>
 </div>
