refactor(contact): extract contact info to separate component

--- a/src/components/contact/contact.component.html
+++ b/src/components/contact/contact.component.html
@@ -4,13 +4,7 @@
       <mat-grid-tile>
         <div class="form-container">
           <div class="title">KONTAKT</div>
-          <div class="contact-item">Marcin Domaradzki</div>
-          <div class="contact-item">
-            <mat-icon fontIcon="call"></mat-icon> +48 795 641 741
-          </div>
-          <div class="contact-item">
-            <mat-icon fontIcon="mail"></mat-icon> ledvisual&#64;o2.pl
-          </div>
+          <mdlv-contact-info></mdlv-contact-info>
         </div>
       </mat-grid-tile>
       <mat-grid-tile>
