--- a/src/components/contact/contact.component.html
+++ b/src/components/contact/contact.component.html
@@ -1,18 +1,14 @@
-<mat-card>
-  <mat-card-content>
-    <mat-grid-list cols="2">
-      <mat-grid-tile>
-        <div class="form-container">
-          <div class="title">KONTAKT</div>
-          <mdlv-contact-info></mdlv-contact-info>
-        </div>
-      </mat-grid-tile>
-      <mat-grid-tile>
-        <div class="form-container">
-          <div class="title">NAPISZ DO NAS</div>
-          <mdlv-contact-form></mdlv-contact-form>
-        </div>
-      </mat-grid-tile>
-    </mat-grid-list>
-  </mat-card-content>
-</mat-card>
+<mat-grid-list cols="3" rowHeight="500px">
+  <mat-grid-tile colspan="1">
+    <div>
+      <div class="title">KONTAKT</div>
+      <mdlv-contact-info></mdlv-contact-info>
+    </div>
+  </mat-grid-tile>
+  <mat-grid-tile colspan="2">
+    <div>
+      <div class="title">NAPISZ DO NAS</div>
+      <mdlv-contact-form></mdlv-contact-form>
+    </div>
+  </mat-grid-tile>
+</mat-grid-list>
