--- a/src/components/contact/contact-info/contact-info.component.html
+++ b/src/components/contact/contact-info/contact-info.component.html
@@ -1,7 +1,9 @@
-<div class="contact-item">Marcin Domaradzki</div>
-<div class="contact-item">
-  <mat-icon fontIcon="call"></mat-icon> +48 795 641 741
-</div>
-<div class="contact-item">
-  <mat-icon fontIcon="mail"></mat-icon> ledvisual&#64;o2.pl
+<div class="contact-info-container">
+  <div class="contact-item">Marcin Domaradzki</div>
+  <div class="contact-item">
+    <mat-icon fontIcon="call"></mat-icon> +48 795 641 741
+  </div>
+  <div class="contact-item">
+    <mat-icon fontIcon="mail"></mat-icon> ledvisual&#64;o2.pl
+  </div>
 </div>
