--- a/src/components/contact/contact-info/contact-info.component.scss
+++ b/src/components/contact/contact-info/contact-info.component.scss
@@ -1,14 +1,18 @@
+.contact-info-container {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+}
+
 .contact-item {
   display: flex;
   align-items: center;
   font-size: 24px;
-  font-weight: bold;
-  min-height: 48px;
+  gap: 6px;
 }
 
 .contact-item mat-icon {
-  font-size: 40px;
-  height: 40px;
-  width: 40px;
-  margin-right: 16px;
+  font-size: 2rem;
+  height: 2rem;
+  width: 2rem;
 }
