--- a/src/components/contact/contact.component.html
+++ b/src/components/contact/contact.component.html
@@ -1,14 +1,11 @@
-<mat-grid-list cols="3" rowHeight="500px">
-  <mat-grid-tile colspan="1">
-    <div>
-      <div class="title">KONTAKT</div>
-      <mdlv-contact-info></mdlv-contact-info>
-    </div>
-  </mat-grid-tile>
-  <mat-grid-tile colspan="2">
-    <div>
-      <div class="title">NAPISZ DO NAS</div>
-      <mdlv-contact-form></mdlv-contact-form>
-    </div>
-  </mat-grid-tile>
-</mat-grid-list>
+<div class='contact-container'>
+  <div class="contact-info-container">
+    <div class="contact-section-title">KONTAKT</div>
+    <mdlv-contact-info></mdlv-contact-info>
+  </div>
+
+  <div>
+    <div class="contact-section-title">NAPISZ DO NAS</div>
+    <mdlv-contact-form></mdlv-contact-form>
+  </div>
+</div>
