--- a/src/components/contact/contact.component.scss
+++ b/src/components/contact/contact.component.scss
@@ -1,17 +1,18 @@
-mat-card {
-  background-color: transparent;
-  box-shadow: none;
+.contact-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
 }
 
-.form-container {
+.contact-info-container {
   display: flex;
   flex-direction: column;
+  justify-content: center;
 }
 
-.title {
+.contact-section-title {
   text-align: center;
-  width: 100%;
   font-size: 56px;
   font-weight: bold;
-  margin-bottom: 24px;
+  margin-bottom: 8px;
 }
