--- a/src/components/contact/contact-form/contact-form.component.scss
+++ b/src/components/contact/contact-form/contact-form.component.scss
@@ -7,6 +7,9 @@ mat-form-field {
   flex-wrap: wrap;
   max-width: 600px;
   gap: 12px;
+  &.handset {
+    gap: 16px;
+  }
 }
 
 .pair-fields {
@@ -20,4 +23,8 @@ button[disabled] {
   background-color: var(--mat-sys-primary);
   color: var(--mat-sys-on-primary);
   opacity: 0.6;
+}
+
+.full-width-button {
+  width: 100%;
 }
