--- a/src/components/contact/contact.component.scss
+++ b/src/components/contact/contact.component.scss
@@ -2,6 +2,12 @@
   display: flex;
   flex-direction: row;
   justify-content: space-around;
+  &.handset {
+    flex-direction: column;
+    gap: 40px;
+    padding-left: 8px;
+    padding-right: 8px;
+  }
 }
 
 .contact-info-container {
@@ -15,4 +21,7 @@
   font-size: 56px;
   font-weight: bold;
   margin-bottom: 8px;
+  &.handset {
+    font-size: 32px;
+  }
 }
