--- a/src/components/contact/contact.component.html
+++ b/src/components/contact/contact.component.html
@@ -1,11 +1,11 @@
-<div class='contact-container'>
+<div class='contact-container' [class.handset]="isHandset">
   <div class="contact-info-container">
-    <div class="contact-section-title">KONTAKT</div>
-    <mdlv-contact-info></mdlv-contact-info>
+    <div class="contact-section-title" [class.handset]="isHandset">KONTAKT</div>
+    <mdlv-contact-info [isHandset]="isHandset"></mdlv-contact-info>
   </div>
 
   <div>
-    <div class="contact-section-title">NAPISZ DO NAS</div>
-    <mdlv-contact-form></mdlv-contact-form>
+    <div class="contact-section-title" [class.handset]="isHandset">NAPISZ DO NAS</div>
+    <mdlv-contact-form [isHandset]="isHandset"></mdlv-contact-form>
   </div>
 </div>
