feat(social-media): add social media urls to buttons & models

--- a/src/components/ui-elements/social-media-buttons/social-media-button/social-media-button.component.html
+++ b/src/components/ui-elements/social-media-buttons/social-media-button/social-media-button.component.html
@@ -1,3 +1,3 @@
-<button mat-icon-button>
-  <mat-icon [svgIcon]="icon" [attr.aria-label]="icon + ' button'"></mat-icon>
-</button>
+<a mat-icon-button [href]="url">
+  <mat-icon [svgIcon]="category" [attr.aria-label]="category + ' button'"></mat-icon>
+</a>
