--- a/src/components/ui-elements/social-media-buttons/social-media-buttons.component.html
+++ b/src/components/ui-elements/social-media-buttons/social-media-buttons.component.html
@@ -1,3 +1,3 @@
 @for(media of socialMedia; track media) {
-<mdlv-social-media-button [icon]="media"> </mdlv-social-media-button>
+<mdlv-social-media-button [category]="media"> </mdlv-social-media-button>
 }
