--- a/src/components/ui-elements/social-media-buttons/social-media-button/social-media-button.component.html
+++ b/src/components/ui-elements/social-media-buttons/social-media-button/social-media-button.component.html
@@ -1,3 +1,3 @@
-<a mat-icon-button [href]="url">
+<a mat-icon-button [href]="url" target="_blank">
   <mat-icon [svgIcon]="category" [attr.aria-label]="category + ' button'"></mat-icon>
 </a>
