style(navbar): add social media & email buttons to navbar

--- a/src/components/navbar/navbar.component.html
+++ b/src/components/navbar/navbar.component.html
@@ -5,8 +5,16 @@
   <ng-container *ngTemplateOutlet="buttonGroupTemplate"></ng-container>
   } @else {
   <div class="transparent-navbar-container">
+    <mdlv-social-media-buttons> </mdlv-social-media-buttons>
+  </div>
+
+  <div class="transparent-navbar-container">
     <mdlv-home-button></mdlv-home-button>
     <ng-container *ngTemplateOutlet="buttonGroupTemplate"></ng-container>
+  </div>
+
+  <div class="transparent-navbar-container">
+    <mdlv-email-button> </mdlv-email-button>
   </div>
   }
 </mat-toolbar>
