--- a/src/styles.scss
+++ b/src/styles.scss
@@ -45,7 +45,11 @@ mat-toolbar {
     );
     & {
       position: fixed;
-      justify-content: center;
+      justify-content: space-between;
+      max-width: 1000px;
+      margin: 0 auto;
+      left: 0;
+      right: 0;
     }
   }
 }
